# profile_intelligence_stage1

./: .env  .env.example  .gitignore  Procfile  README.md  SOLUTION.md  apply.sh  main.py  pyproject.toml  requirements-dev.txt  seed.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 38037a880382_baseline_schema.py  3a8d5ff6c0e4_add_refresh_tokens_table.py  5457380f5462_add_profile_query_indexes.py  bb47d55592c8_add_users_table.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/middleware/: api_version.py  csrf.py  rate_limit.py  request_logging.py
app/routers/: auth.py  profiles.py  users.py
app/security/: deps.py  rate_limit.py
app/services/: csv_ingest.py  enrichment.py  github_oauth.py  grader.py  normalize.py  profile.py  query_cache.py  query_parser.py  refresh_tokens.py  tokens.py  users.py
backup_20260416_030115/: Procfile
backup_20260416_030115/app/: database.py  models.py  schemas.py
backup_20260416_030115/app/routers/: profiles.py
backup_20260416_030115/app/services/: enrichment.py  profile.py
scripts/: benchmark.py  generate_csv.py  load_csv.py  mint_grader_analyst.py
tests/: conftest.py  test_api_version.py  test_auth.py  test_error_envelope.py  test_export.py  test_grader_hooks.py  test_pagination_shape.py  test_profiles.py  test_query_normalization.py  test_rate_limit_middleware.py  test_roles.py  test_users_me.py
